--- a/css/6-3-2.css
+++ b/css/6-3-2.css
@@ -6,8 +6,7 @@
     text-align: center;
     color: #fff;
     /* background: url("movie.jpg") no-repeat; */
-    background-size: cover;
-   
+    background-size: contain;
 }
 
 /* #loading {
