--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 }
 body{
     font-family: "Crimson", sans-serif;
-    margin: 0;
+    font-size: 1vw;
+  
 }
 #video{
     position: fixed;
@@ -15,9 +16,11 @@ body{
 }
 .pre-container{
     background-image: url("backimage.jpg");
-    background-size: cover;
+    background-size: contain;
     background-position: center center;
-    min-height: 100vh;
+    background-repeat:no-repeat;
+    min-height:150vh;
+    
 }
 a{
     color: rgb(252, 246, 246);
@@ -26,11 +29,16 @@ a{
 }
 .container{
     margin: 0 auto;
-    padding: 1rem;
-    max-width: 100%;
+    padding: 0;
 }
+
+.container:only-child(.content)
+{
+    padding:25%;
+}
+
 nav{
-    padding: 1rem 0;
+    padding: 1rem;
  
 }
 .pre-nav{
@@ -38,15 +46,16 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:grey;
-   
+    background-color:white;
+    border: 1px solid black;
+    min-width:600px;
 }
 .logo{
-    color:white;
-    text-shadow:2px 2px black;
+    color:black;
     font-weight: bold;
     font-size: 2.5rem;
     cursor:default;
+
   
 }
 .logo-text{
@@ -55,26 +64,22 @@ nav{
 }
 nav ul{
     display: flex;
-    flex-wrap: wrap;
     list-style-type: none;
     padding: 0;
-    border: grey 1px solid;
 }
 nav li{
     flex: 1 auto;
 }
 nav li a{
-
-    
-    background-color: white;
+    background-color: transparent;
     display:block;
     padding: 1rem 2rem;
     text-align: center;
     color:black;
 }
 nav a.highlight{
-    background-color:grey;
-    color: white;
+    background-color:transparent;
+    color: black;
     text-decoration: underline;
     text-underline-offset: 5px;
 }
@@ -84,16 +89,20 @@ nav a:hover{
    text-underline-offset: 5px;
    
 }
+.pre-content{
+    padding: 0% 10%;
+    min-width:600px;
+}
 .content{
     border: 10px solid white;
     background-color:rgb(241, 238, 238);
     display: flex;
     flex-direction: column;
     font-size: 1rem;
-    width:1000px;
     margin:0 auto;
     align-items: flex-start;
     margin-top:3rem;
+    
 }
 .content h1 {
     text-decoration: underline solid;;
@@ -128,8 +137,15 @@ nav a:hover{
     color:black;
     font-size:1rem;
 }
-.introtext p{
-    margin: 1em 4em;
+.content ul{
+    margin:1em 5%;
+    display: flex;
+    list-style-type: none;
+    align-self:center;
+}
+.introtext{
+    margin:1% 5%;
+    align-self:center;
     border-left:solid grey 3px;
     padding: 1em;
     color: black;
@@ -137,7 +153,7 @@ nav a:hover{
     background-color:white;
 }
 .preimg{
-    margin:1em 4em;
+    
     border: 2px solid black;
     background: url("https://cache.lovethispic.com/uploaded_images/192646-Everything-Is-Temporary.jpg");
     background-repeat: no-repeat;
@@ -147,10 +163,36 @@ nav a:hover{
     height: 250px;
     text-align: center;
     background-color:grey;
+    float:left;
+    display:flex;
 }
 .preimg p{
     color:white;
     font-weight:700;
+}
+.btxt{
+    float:right;
+    padding:5px;
+    display:flex;
+    background-color:white;
+    margin:0% 5%;
+    border:darkgrey 1px solid;
+}
+.buttonopt1{
+    margin: 3% 15%;
+    display:inline-block;
+    background-color:grey;
+    padding:1vw;
+    border-radius:10px;
+    border:5px solid transparent;
+    font-weight:500;
+}
+
+.buttonopt1:hover
+{
+    color:black;
+    background-color:white;
+    border:black 5px solid;
 }
 
 .white-link{
@@ -181,11 +223,15 @@ nav a:hover{
     .content h1 {
         font-size: 1.25rem;
     }
+    .content h2 {
+        font-size: 1.25rem;
+    }
 
     .content iframe{
         margin-top:3em;
         align-self:center;
         width: 0.5 rem;
+        height:2200px;
     }
 
 }
