--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ nav a:hover{
 }
 .content h2{
  margin:3% 10%;
- font-size: 2vw;
+ font-size: 3vh;
 }
 .content iframe{
     margin-top:1em;
@@ -172,20 +172,12 @@ nav a:hover{
     row-gap: 10px;
 }
 .preimg{
-    
-    border: 2px solid black;
-    background: url("/img/speaker1.jpg");
-    background-repeat: no-repeat;
-    background-size: 225px 275px;
-    background-position: bottom;
-    width: 225px;
-    height: 300px;
-    text-align: center;
-    background-color:grey;
+    text-align:center;
+    font-family:Arial, Helvetica, sans-serif;
 }
-.preimg p{
-    color:white;
-    font-weight:700;
+.preimg img{
+    height:auto;
+    width: 250px;
 }
 .btxt{
     padding:2%;
@@ -195,7 +187,7 @@ nav a:hover{
 }
 .buttonopt1{
     margin: 0% 10%;
-    display:block;
+    display:inline-block;
     background-color:grey;
     padding:10px;
     border-radius:4px;
@@ -213,11 +205,17 @@ nav a:hover{
     display:flex;
     flex-direction:row;
     flex-wrap:wrap;
-    justify-content:space-evenly;
-    margin:1em 10%;
     row-gap: 10px;
     column-gap:10px;
     align-items:center;
+}
+.flex-left-margin-align-even{
+    justify-content:space-evenly;
+    margin:1em 10%;
+}
+.flex-left-joinUsSteps{
+    align-items:flex-start;
+    margin:0;
 }
 .flex-img-box{
  text-align:center;
@@ -235,6 +233,7 @@ nav a:hover{
     color:black;
     background-color:white;
     border:black 5px solid;
+    display:inline-block;
 }
 
 .white-link{
@@ -247,6 +246,13 @@ nav a:hover{
     color:#054605;
     padding: 1rem;
     margin-top: 2rem;
+}
+#step1{
+    width:auto;
+}
+#step2{
+    width:auto;
+    max-width: 675px;
 }
 @media screen and (max-width:768px) {
     .logo a{
@@ -279,7 +285,9 @@ nav a:hover{
     .content h2 {
         font-size: 1.75rem;
     }
-
+    .preimg{
+        margin-top:5%;
+    }
     .flexcontainer{
         margin:0%;
     }
@@ -304,6 +312,9 @@ nav a:hover{
         margin: 10px 10%;
     }
     .regtxt{
-        margin: 10px 10%;
+        margin: 5px 5%;
+    }
+    #step2{
+        min-width: auto;
     }
 }
