--- a/style.css
+++ b/style.css
@@ -118,17 +118,21 @@ nav a:hover{
     font-size: 1rem;
     align-items: flex-start;
     margin-top:3rem;
+    padding-bottom: 10vh;
     
 }
 .content h1 {
-    text-decoration: underline solid;;
-    text-underline-offset: 0.5rem;
+    border: 3px solid;
+    border-image-slice: 1;
+    border-width: 3px;
+    border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
     line-height: 1.8;
     align-self:center;
     color: black;
     display: inline-block;
-    padding: 1rem;
+    padding:1%;
     font-weight: 200;
+    margin:1vw;
 }
 .content h2{
  margin:3% 10%;
@@ -153,6 +157,16 @@ nav a:hover{
     display:inline-block;
     background-color:white;
     text-align:left;
+}
+#clubpic{
+    align-self:center;
+    width:45vw;
+    height:30vw;
+    border: 3px solid;
+    border-image-slice: 1;
+    border-width: 3px;
+    border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
+    margin: 1em 0;
 }
 .jinfo ul{
     list-style-type:circle;
@@ -186,7 +200,7 @@ nav a:hover{
     text-align: left;
 }
 .buttonopt1{
-    margin: 0% 10%;
+    margin: 0% 0%;
     display:inline-block;
     background-color:grey;
     padding:10px;
@@ -228,7 +242,7 @@ nav a:hover{
     width:10vw;
 }
 .flex-img-box p{
-    font-size: 130%;
+    font-size: 2vh;
 }
 .buttonopt1:hover
 {
@@ -237,7 +251,10 @@ nav a:hover{
     border:black 5px solid;
     display:inline-block;
 }
+.flex-img-box .material-symbols-outlined{
 
+    font-size:20vh;
+}
 .white-link{
     background-color:#acb3f8;
     color: #110202;
@@ -324,5 +341,9 @@ nav a:hover{
     }
     #step2{
         border:none;
+    }
+    #clubpic{
+        width:70vw;
+        height:auto;
     }
 }
